fixed the duration gap bewteen the buttons

--- a/static/static.css
+++ b/static/static.css
@@ -760,3 +760,14 @@ body{
     opacity:.35;
 
 }
+.features-container{
+
+    transform-origin:center center;
+
+}
+
+.divider{
+
+    transform-origin:top center;
+
+}
